* Enable choosing of query datasource at runtime
* Display query results in the show parameters page 
* Allow modification of column attached to a rule
* Enable display of final sql generated for a query
* Enable setting of the format to be used for dates in query output
* Added All option for datatable output
* Improved handling of numeric rule values

ART 2.3.1
* Fix NullPointerException on pdf output with null strings
* Fix to enable error free charts with java 1.7
* Increased axis labels remove_at value for charts
* Fix to enable display of friendly parameter values for chained parameters
* Modified string for chained multi parameter, all values, from ":: All items" to "All"
* Fix for error on selecting all values option for chained multi parameter
* Removed check enforcing presence of parameter label in the sql source

ART 2.3
* Added database type drop down field to help populate common jdbc details
* Allow username and password field values to be used for CUBRID database
* Allow blank passwords for datasources
* Allow "not equals" operator for dynamic queries
* Support display of unicode characters in pdf output and charts
* Enable display of graph parameters and data in pdf output
* When using show parameters option, for lov parameters, display actual parameter value and friendly display value
* Allow selection of parameters for drill down queries
* Updated quartz to 2.1.5
* Updated jasperreports to 4.6

ART 2.2.1
* Added support for the CUBRID database (www.cubrid.org)
* Fix to remove warning when precompiling some jsp files
* Fix for dashboard description not showing on start page
* Remove need to specify _GRAPH_ID parameter for direct execution of graphs
* Fix to allow graphs to work with QUERY_ID or queryId parameters (thanks to yidong123)
* Fix for dashboards not working on chrome (thanks to yidong123)
* Fix for rule value ALL_ITEMS not working properly (thanks to yidong123)
* Fixed issue with charts not displaying first time on dashboards