@@ -10,6 +10,7 @@ ART 2.4
 * Enable setting of the format to be used for dates in query output
 * Added All option for datatable output
 * Improved handling of numeric rule values
+* Sort numeric columns correctly in datatable view mode
 
 ART 2.3.1
 * Fix NullPointerException on pdf output with null strings
